sophons/apps/backups/rclone/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone-backup
  namespace: backup-system
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: backup
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rclone
      app.kubernetes.io/instance: backup
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rclone
        app.kubernetes.io/instance: backup
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      tolerations:
        - key: caeneus.sophons.cloud
          operator: Exists

      containers:
        - name: rclone-s3
          image: ghcr.io/rclone/rclone:1.73.3
          args:
            - serve
            - s3
            - -vvv
            - --addr=:8080
            - --auth-key=$(AWS_ACCESS_KEY_ID),$(AWS_SECRET_ACCESS_KEY)
            - /less-big-boi

          ports:
            - containerPort: 8080
              protocol: TCP
              name: s3

          volumeMounts:
            - mountPath: /less-big-boi
              name: less-big-boi
              subPath: rclone

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]

        - name: rclone-restic
          image: ghcr.io/rclone/rclone:1.73.3
          args:
            - serve
            - restic
            - -vvv
            - --addr=:8081
            - --user=$(AWS_ACCESS_KEY_ID)
            - --pass=$(AWS_SECRET_ACCESS_KEY)
            - "locals3:restic/"

          ports:
            - containerPort: 8081
              protocol: TCP
              name: restic

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]

      volumes:
        - name: less-big-boi
          persistentVolumeClaim:
            claimName: backup-less-big-boi
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone-time-machine
  namespace: backup-system
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: time-machine
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rclone
      app.kubernetes.io/instance: time-machine
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rclone
        app.kubernetes.io/instance: time-machine
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      tolerations:
        - key: caeneus.sophons.cloud
          operator: Exists

      containers:
        - name: rclone-s3
          image: ghcr.io/rclone/rclone
          args:
            - serve
            - s3
            - -vvv
            - --addr=:8080
            - --auth-key=$(AWS_ACCESS_KEY_ID),$(AWS_SECRET_ACCESS_KEY)
            - /time-machine

          ports:
            - containerPort: 8080
              protocol: TCP
              name: s3

          volumeMounts:
            - mountPath: /time-machine
              name: time-machine
              subPath: rclone

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]

        - name: rclone-restic
          image: ghcr.io/rclone/rclone:1.73.3
          args:
            - serve
            - restic
            - -vvv
            - --addr=:8081
            - --user=$(AWS_ACCESS_KEY_ID)
            - --pass=$(AWS_SECRET_ACCESS_KEY)
            - "locals3:restic/"

          ports:
            - containerPort: 8081
              protocol: TCP
              name: restic

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]

      volumes:
        - name: time-machine
          persistentVolumeClaim:
            claimName: time-machine-big-boi
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone-crypt-b2
  namespace: backup-system
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: crypt-b2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rclone
      app.kubernetes.io/instance: crypt-b2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rclone
        app.kubernetes.io/instance: crypt-b2
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: topology.kubernetes.io/region
                    operator: NotIn
                    values: [ng]
              weight: 100

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: rclone
          image: ghcr.io/rclone/rclone:1.73.3
          args:
            - serve
            - s3
            - -vvv
            - --addr=:8080
            - --auth-key=$(AWS_ACCESS_KEY_ID),$(AWS_SECRET_ACCESS_KEY)
            - "cryptb2:"
          ports:
            - containerPort: 8080
              protocol: TCP
              name: s3

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]

        - name: rclone-restic
          image: ghcr.io/rclone/rclone:1.73.3
          args:
            - serve
            - restic
            - -vvv
            - --addr=:8081
            - --user=$(AWS_ACCESS_KEY_ID)
            - --pass=$(AWS_SECRET_ACCESS_KEY)
            - "locals3:restic/"

          ports:
            - containerPort: 8081
              protocol: TCP
              name: restic

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
