sophons/apps/backups/rclone/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rclone-s3-backup
  namespace: backup-system
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: backup
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - ps3-backup.sphns.run

  rules:
    - backendRefs:
        - name: rclone-backup
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rclone-restic-backup
  namespace: backup-system
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: backup
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - prestic-backup.sphns.run

  rules:
    - backendRefs:
        - name: rclone-backup
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rclone-s3-crypt-b2
  namespace: backup-system
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: crypt-b2
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - ps3-b2.sphns.run

  rules:
    - backendRefs:
        - name: rclone-crypt-b2
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rclone-restic-crypt-b2
  namespace: backup-system
  labels:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: crypt-b2
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - prestic-b2.sphns.run

  rules:
    - backendRefs:
        - name: rclone-crypt-b2
          port: 8081
